@@ -5,8 +5,8 @@
 #else
 #define	USED
 #endif
-static const char sccsid[] USED = "@(#)/usr/ucb/grap.sl	5.5 (gritter) 12/5/05";
-const char version[] = "version Dec 30, 1995	5.5 (gritter) 12/5/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/grap.sl	5.6 (gritter) 1/19/06";
+const char version[] = "version Dec 30, 1995	5.6 (gritter) 1/19/06";
 /* SLIST */
 /*
 coord.c:	Sccsid @(#)coord.c	1.3 (gritter) 10/18/05	
@@ -19,7 +19,7 @@ grap.y:	Sccsid @(#)grap.y	1.3 (gritter) 10/18/05
 grapl.c:	Sccsid @(#)grapl.l	1.4 (gritter) 11/22/05	
 grapl.c: * Sccsid @(#)ncform	1.4 (gritter) 11/18/05
 grapl.l:	Sccsid @(#)grapl.l	1.4 (gritter) 11/22/05	
-input.c:	Sccsid @(#)input.c	1.5 (gritter) 12/5/05	
+input.c:	Sccsid @(#)input.c	1.6 (gritter) 1/19/06	
 label.c:	Sccsid @(#)label.c	1.2 (gritter) 10/18/05	
 main.c:	Sccsid @(#)main.c	1.5 (gritter) 12/5/05	
 misc.c:	Sccsid @(#)misc.c	1.3 (gritter) 10/18/05	
