@@ -1,6 +1,8 @@
 Release ...
 * troff: Eastern European characters for Unicode/PostScript conversion
   have been added (patch by Vladimir B. Machulsky).
+* pic, grap: Fixed 8-bit input in label texts (bug reported by Vladimir
+  B. Machulsky).
 
 Release 060114
 * troff: The internal codes for PostScript characters are now unique across
